--- a/src/app/core/shared/component/book/book.component.html
+++ b/src/app/core/shared/component/book/book.component.html
@@ -1,9 +1,10 @@
 @if(bookObj){
     <div class="border rounded py-3">
-        <div>
+        <div class="text-center">
             {{bookObj.Name}}
         </div>
         <div class="image">
+            <img src="assets/images/book1.jpg" alt="fds">
             <img [src]="bookObj.Cover" alt="image">
         </div>
         <div>
@@ -15,9 +16,9 @@
         <div>
             @if(userObj.id && bookObj.PurchasedBy.includes(userObj.id)){
                 <mat-progress-bar mode="determinate" [value]="bookObj.LastReadPosition | appProgress : userObj.id : bookObj.Data.length"></mat-progress-bar>
-                <button (click)="viewBook(bookObj.Id)" >View</button>
+                <button  mat-raised-button color="primary" (click)="viewBook(bookObj.Id)" >View</button>
             }@else {
-                <button (click)="purchaseBook(bookObj.Id)">Purchase</button>
+                <button  mat-raised-button color="primary" (click)="purchaseBook(bookObj.Id)">Purchase</button>
             }
         </div>
     </div>
