--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,5 @@
-header
+<mat-toolbar class="d-flex justify-content-between align-items-center">
+    <span [routerLink]="['']">My e-book</span>
+    <button mat-raised-button color="error" (click)="logout()">Logout</button>
+  </mat-toolbar>
+  
