--- a/src/app/pages/view-book/view-book.component.css
+++ b/src/app/pages/view-book/view-book.component.css
@@ -1,3 +1,21 @@
 :host {
   display: block;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+#marker {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.573);
+  color: white;
+  padding: 1px 4px;
+  font-size: 10px;
+}
+
+#marker:hover{
+  visibility: hidden;
+}
