--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="d-flex justify-content-between align-items-center">
-    <span [routerLink]="['']">My e-book</span>
-    <button mat-raised-button color="error" (click)="logout()">Logout</button>
+    <span [routerLink]="['']"><mat-icon>menu_book</mat-icon> My e-book</span>
+    <button mat-raised-button color="warn" (click)="logout()">Logout <mat-icon>logout</mat-icon></button>
   </mat-toolbar>
   
